Fix: bottom-spacing in Safari mobile browser

--- a/public/css/ITCSS.css
+++ b/public/css/ITCSS.css
@@ -517,26 +517,27 @@ h4.text-center {
 
 /* line 295 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
 .footer-nav {
+  margin-bottom: 50px;
   margin-top: 50px;
   background-color: #f5f5f5;
 }
 
-/* line 299 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
+/* line 300 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
 .footer-link {
   padding: 10px 6px 10px 6px;
 }
 
-/* line 301 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
+/* line 302 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
 a.footer-link:hover {
   background-color: #e6e6e6;
 }
 
-/* line 307 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
+/* line 308 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
 .footer-next {
   text-align: right;
 }
 
-/* line 309 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
+/* line 310 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/HtmlElements.import.styl */
 
 /* line 1 : /Users/kyleking/Developer/KyleKing.github.io/src/styles/Imports/macaw.import.styl */
 
