--- a/src/styles/Imports/HtmlElements.import.styl
+++ b/src/styles/Imports/HtmlElements.import.styl
@@ -293,6 +293,7 @@ h4.text-center
 // Footer Next/Back Styles
 
 .footer-nav
+  margin-bottom 50px
   margin-top 50px
   background-color darken($color-bg, 4%)
 
